\name{NEWS}
\title{News for Package \pkg{RViennaCL}}
\section{Release version 1.7.1}{
  \itemize{
    \item{Upgraded to use ViennaCL 1.7.1 headers}
  }
}
\section{Initial Release version 1.7.0}{
  \itemize{
    \item{Created package to provide R access
          to the ViennaCL header files for rapid
          gpu computing.}
  }
}