@@ -1,8 +1,8 @@
 Package: RViennaCL
 Type: Package
 Title: ViennaCL C++ Header Files
-Version: 1.7.1-0
-Date: 2016-01-21
+Version: 1.7.1-1
+Date: 2016-03-07
 Author: Charles Determan Jr.
 Maintainer: Charles Determan Jr <cdetermanjr@gmail.com>
 Description: ViennaCL is a free open-source linear algebra library 
@@ -18,6 +18,6 @@ URL: http://github.com/cdeterman/RViennaCL
 BugReports: http://github.com/cdeterman/RViennaCL/issues/new
 Suggests: gpuR
 NeedsCompilation: no
-Packaged: 2016-01-22 14:55:06 UTC; cdeterman
+Packaged: 2016-03-15 18:54:02 UTC; cdeterman
 Repository: CRAN
-Date/Publication: 2016-01-23 01:08:08
+Date/Publication: 2016-03-15 20:28:25
